--- a/app/Resources/views/top-nav.html.twig
+++ b/app/Resources/views/top-nav.html.twig
@@ -4,7 +4,16 @@
             {% if app.user %}Welcome {{ app.user.username }}!{% endif %}
         </div>
         
-        <div class="col-xs-4">
+        <div class="col-xs-4 title">
+            <a href="{{ path('homepage') }}" class="logo-wrapper">
+                {% image
+                    '@ATSMovieBundle/Resources/public/images/homepage-icon.png'
+                    output='images/homepage-logo.png'
+                %}
+                    <img src="{{ asset_url }}" alt="Logo" class="logo" />
+                {% endimage %}
+            </a>
+            
             <h4>Austin's Movie Manager</h4>
         </div>
         
