--- a/app/Resources/views/components/foot.html.twig
+++ b/app/Resources/views/components/foot.html.twig
@@ -3,14 +3,14 @@
  #}
 
 <div class="row footer">
-    <div class="col-xs-offset-1 col-xs-9">
+    <div class="col-xs-9">
         <a href="http://github.com/ashinpaugh">
             Created by Austin Shinpaugh
         </a>
     </div>
     
-    <div class="col-xs-1">
-        Copyright &copy; {{ 'now'|date('Y') }}
+    <div class="col-xs-3 text-center">
+        <span class="hidden-xs">Copyright</span> &copy; {{ 'now'|date('Y') }}
     </div>
 </div>
 
