Cleaned up the Movie controller to leverage Symfony's _method overrides to follow REST API standards.

--- a/src/ATS/Bundle/MovieBundle/Resources/views/Default/index.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Default/index.html.twig
@@ -17,7 +17,7 @@
     {% endembed %}
     
     <div class="available-movies row">
-        {{ render(controller('ATSMovieBundle:Movie:get', {
+        {{ render(controller('ATSMovieBundle:Movie:getList', {
             '_format' : 'html'
         })) }}
     </div>
