--- a/src/ATS/Bundle/MovieBundle/Resources/views/Movie/list.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Movie/list.html.twig
@@ -1,6 +1,6 @@
 {% for movie in movies %}
     <div class="col-xs-11 col-sm-3 col-lg-2 movie-tile text-center" data-id="{{ movie.id }}">
-        <form id="frm-movie-tile-{{ movie.id }}" action="{{ path('post_movie_edit', {'id': movie.id}) }}" method="post">
+        <form id="frm-movie-tile-{{ movie.id }}" action="{{ path('patch_movie', {'id': movie.id}) }}" method="post">
             {% if app.user and app.user.id == movie.owner.id %}
                 {% embed '@ATSMovie/Movie/components/crud.html.twig' with {'movie' : movie} %}
                 {% endembed %}
@@ -69,6 +69,8 @@
                 </div>
                 
             </div>
+            
+            <input name="_method" value="patch" hidden/>
         </form>
         
         <div class="clearfix"></div>
