--- a/src/ATS/Bundle/MovieBundle/Resources/views/Security/login.html.twig
+++ b/src/ATS/Bundle/MovieBundle/Resources/views/Security/login.html.twig
@@ -9,12 +9,14 @@
             <div class="col-xs-offset-2 col-xs-8"><hr /></div>
         {% endif %}
         
-        {% if error %}
-            <div class="{{ columns }}">
-                <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div class="{{ columns }}">
+            <div id="login-error" class="alert alert-danger hidden">
+                {% if error %}
+                    {{ error.messageKey|trans(error.messageData, 'security') }}
+                {% endif %}
             </div>
-        {% endif %}
-    
+        </div>
+        
         <div class="{{ columns }} credentials">
             <form id="frm-login" action="{{ path('login_check') }}" method="post">
                 <h5>Login</h5>
